  - Defines functions for generating the subset of the elements ih the Go syntax which we use in our implementation.
    -> All the code generation is currently implemented manually using sprintf, but it should really be implemented using an AST.

> gocodegen.ml:
  - Defines the functions which define the code generation generation scheme for translating the local types into a Go implementation. 


SCRIBBLE TOOL:

> lib.ml
  - I have added several utility functions for creating the directory structure and the source files of the Go implementation.

> main.ml
  - I have defined a completely different workflow for running Scribble with nested protocols because I wasn't sure how to extend the existing ones with the new steps I introduced.

  - The current implementation may not be the most intuitive/easy to use.
    -> The whole ast will be displayed if the user specifies the ast flag

    -> When displaying global types, it will display all the global types in the Scribble module before and after they have been normalised. 
    
    -> Similarly, all the possible local types will be displayed if the projection flag is set.

    -> When generating the implementation, some additional constraints on the names used in the protocol declarations are made. I believe some of these checks could be relevant for the main protocol validation, but currently they are only made if the protocol implementation is being generated.

    -> When generating the implementation, you must specify the global protocol which will serve as the entry point for the computation (not a nested protocol, as it could have dynamic participants). However, there are two small issues with the current implementation:
      * If a protocol is specified, but it is not a protocol defined in the scribble module, it will simply not generate anything exiting silently.

      * Currently the implementation does not ensure that the protocol specified is a global protocol (or even a top-level protocol).
